# opensarthi

./: .gitignore  README.md  SKILLS.md
apps/android/: README.md  capacitor.config.json  index.html  package.json  vite.config.ts
apps/android/android/: build.gradle  gradle.properties  (+1 more)
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: opensarthi-runtime-x86_64-unknown-linux-gnu
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ipc.rs  lib.rs  main.rs  sidecar.rs
docs/: 01_frontend_and_desktop_shell.md  02_backend_runtime_and_infra.md  03_agentic_flow.md  04_websocket_protocol.md
docs/impl/: 00_overview.md  01_execution_state_machine.md  02_observation_system.md  03_tool_system.md  04_testing_strategy.md  05_voice_pipeline.md  06_wake_word_settings.md  07_accessibility_integration.md  08_prompting_architecture.md
runtime/: README.md  agent_runtime.py  config.py  db.py  dev_logger.py  main.py  main_android.py  observation.py  requirements.txt  state_machine.py  sync_primitives.py  window_session.py
runtime/agents/: __init__.py  behavioral_observer.py  healer.py  reviewer.py
runtime/api/: websocket.py
runtime/observer/: ocr.py
runtime/planner/: agent.py  decomposer.py  schemas.py
runtime/tests/: test_runtime.py  test_tools.py
runtime/tools/: base.py  desktop.py  media.py  memory.py  notes.py  registry.py  self_fix.py  system.py  wait_tools.py
runtime/voice/: pipeline.py  stt.py  vad.py  wakeword.py
(+40 files in other folders)
