[package]
name = "opensarthi"
version = "0.1.0"
description = "OpenSarthi — AI Desktop Agent & Assistant"
authors = ["OpenSarthi Contributors"]
license = "Apache-2.0"
repository = "https://github.com/opensarthi/opensarthi"
edition = "2021"
rust-version = "1.80"

[lib]
name = "opensarthi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell                = "2"
tauri-plugin-notification         = "2"
tauri-plugin-global-shortcut      = "2"
tauri-plugin-clipboard-manager    = "2"
tauri-plugin-dialog               = "2"
tauri-plugin-autostart            = "2"

cpal           = "0.15"
rodio          = { version = "0.19", default-features = false, features = ["wav", "mp3"] }
xcap           = "0.4"

tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow         = "1"
once_cell      = "1"
base64         = "0.22"
image          = "0.25"
